--- a/storia-cliente/package.json
+++ b/storia-cliente/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^7.8.0",
+    "@supabase/supabase-js": "^2.56.0",
     "dotenv": "^17.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
