--- a/storia-api/Dockerfile
+++ b/storia-api/Dockerfile
@@ -1,13 +1,25 @@
-FROM node:22-alpine AS build
-
+# --- ESTÁGIO 1: Base ---
+# Esta base será compartilhada entre dev e produção para aproveitar o cache
+FROM node:22-alpine AS base
 WORKDIR /src/app
+# Copia os arquivos de dependência primeiro
 COPY package.json ./
 
+# --- ESTÁGIO 2: Desenvolvimento ---
+# Este estágio será usado quando você rodar `docker-compose up` com o arquivo de override
+FROM base AS development
+# Instala TODAS as dependências, incluindo as de desenvolvimento (ex: nodemon)
 RUN npm install
-RUN npm install -g pm2
-
 COPY . .
+# O comando será definido no docker-compose.override.yml para hot-reload
+CMD ["npm", "run", "dev"]
 
+
+# --- ESTÁGIO 3: Produção ---
+# Este estágio será usado para a build final de produção
+FROM base AS production
+# Instala APENAS as dependências de produção para uma imagem mais leve
+RUN npm ci --only=production
+COPY . .
 EXPOSE 3000
-
-CMD ["pm2-runtime", "start", "app.js"]
+CMD ["npx", "pm2-runtime", "start", "app.js"]
