--- a/storia-api/package.json
+++ b/storia-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +22,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.9.1",
+    "pm2": "^6.0.8",
     "stripe": "^18.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
