--- a/storia-api/Dockerfile
+++ b/storia-api/Dockerfile
@@ -2,23 +2,19 @@
 # Esta base será compartilhada entre dev e produção para aproveitar o cache
 FROM node:22-alpine AS base
 WORKDIR /src/app
-# Copia os arquivos de dependência primeiro
-COPY package.json ./
+COPY package.json package-lock.json* ./
 
 # --- ESTÁGIO 2: Desenvolvimento ---
-# Este estágio será usado quando você rodar `docker-compose up` com o arquivo de override
+# Usado pelo docker-compose.override.yml
 FROM base AS development
-# Instala TODAS as dependências, incluindo as de desenvolvimento (ex: nodemon)
 RUN npm install
 COPY . .
-# O comando será definido no docker-compose.override.yml para hot-reload
 CMD ["npm", "run", "dev"]
 
-
 # --- ESTÁGIO 3: Produção ---
-# Este estágio será usado para a build final de produção
+# Usado pelo docker-compose.yml para a build final
 FROM base AS production
-# Instala APENAS as dependências de produção para uma imagem mais leve
+# Instala APENAS as dependências de produção
 RUN npm ci --only=production
 COPY . .
 EXPOSE 3000
