--- a/storia-api/package.json
+++ b/storia-api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.51.0",
+    "abacatepay-nodejs-sdk": "^1.4.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
